2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/test/test_http.py:
	Generate an id for the keycard in the fake authentication medium.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/base/http.py:
	Remove deprecated API usage.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	Fix usage of N_ and T_ i18n methods. N_ expects a format string, T_
	does the interpolation.

2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/plugs/rrd.py:
	* flumotion/component/misc/httpserver/httpfile.py:
	Remove unused imports. Thanks, pychecker!

2009-07-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/plugs/requestmodifier.py:
	Fix set use as per previous commits.

2009-07-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/gtk/configurationassistant.py:
	* flumotion/common/fxml.py:
	* flumotion/component/combiners/switch/switch.py:
	Fix problems in previous commit that was due to my bad
	review on Friday.

2009-07-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Zaheer Abbas Merali

	* flumotion/common/python.py:
	  Add 'set' name because sets.Set was deprecated in 2.6.
	* flumotion/admin/gtk/configurationassistant.py:
	* flumotion/common/fxml.py:
	* flumotion/common/messages.py:
	* flumotion/common/registry.py:
	* flumotion/component/combiners/switch/switch.py:
	  Adapt.

2009-07-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Zaheer Abbas Merali

	* flumotion/admin/admin.py:
	* flumotion/common/bundle.py:
	* flumotion/common/python.py:
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/bouncers/htpasswdcrypt.py:
	* flumotion/component/bouncers/plug.py:
	* flumotion/component/bouncers/saltsha256.py:
	* flumotion/component/misc/httpserver/cachedprovider.py: