@@ -3,6 +3,15 @@
 	reviewed by: Sebastien Merle
 
 	* flumotion/test/test_http.py:
+	Set the default response code to http.OK in the FakeRequest,
+	that's what real twisted.web.http.Request does.
+	Assert we got http.OK when checking if the request got authorized.
+
+2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>
+
+	reviewed by: Sebastien Merle
+
+	* flumotion/test/test_http.py:
 	Generate an id for the keycard in the fake authentication medium.
 
 2009-07-20  Jan Urbanski  <jurbanski@flumotion.com>
